--- a/index.html
+++ b/index.html
@@ -113,9 +113,55 @@
             <code class="language-html"> .block-color-star-1 </code>
         </div>
         <div>
-            <div class="red_tab"> Best 20 </div>
+            <div class="promo-tab-red"> Best 20 </div>
             <code class="language-html"> .red_tab </code>
         </div>
+        <div>
+            <div class="promo-tab-hilight">Best Seller</div>
+            <code class="language-html"> .tour_hightlight_tab </code>
+        </div>
+        <div class="tab-price">
+            <a href="http://www.asiawebdirect.com/thailand/bangkok/sathorn/w-bangkok/?pid=AWINP16&amp;"><span>From</span> THB 1,999</a>
+        </div>
+        <code class="language-html"> .price-tab </code>
+
+        <div class="tab-teaser">Top 10</div>
+        <code class="language-html"> .tour_teaser_tab </code>
+
+        <div class="button"> 
+            <a class="button-destination"> book now! </a>
+            <code class="language-html"> .box_hotel_des a.hotel_book_btn </code>
+        </div>
+
+       <div class="tab-tour">
+            <div class="tab-tour-detail">
+                <div class="tab-tour-detail-currency">from US</div>
+                <div class="tab-tour-detail-currency--US">6,500</div>
+            </div>
+            <a href="http://asiawebdirect.bitbucket.org/tour-page-detail.html">
+                <div class="tab-tour-btn">
+                    <div class="tab-tour-btn--txt">View Tour</div>
+                </div>
+            </a>
+        </div>
+        <code class="language-html">.tour_teaser_price_wrapper</code>
+    
+        <div class="tab-hilight">
+            <div class="tab-hilight-detail">
+                <h4>
+                    <a href="#">Whitewater Rafting and Elephant Trekking</a>
+                </h4>
+                <div class="block-color-star-5"></div>
+                <p>Picture postcard perfect, with classic white sandy beaches, surrounded by impressive limestone cliffs and sunlit crystal water</p>
+            </div>
+            <div class="tab-hilight-price">
+                <div class="tab-hilight-price-currency">from THB</div>
+                <div class="tab-hilight-price-currency--THB">9,500</div>
+            </div>
+
+        </div>
+
+
 
 </section>
 <section class="wrapper-font">
