Update & History function
add History Maker function

--- a/index.html
+++ b/index.html
@@ -158,9 +158,23 @@
                 <div class="tab-hilight-price-currency">from THB</div>
                 <div class="tab-hilight-price-currency--THB">9,500</div>
             </div>
-
         </div>
+        <code class="language-html">.tour_highlight_detail_wrapper</code>
+        
+        <div class="feature">
+            <h4> Test </h4>
+            <p>One of Kuta’s earliest and most renowned five-star resorts, this hotel lends its name to the main street where it is located, offering a private beachfront with 280 guestrooms, 32 suites, three restaurants and grand meeting facilities.. </p>
+        </div>
+         <code class="language-html">.feature-ads_wrapper</code>
 
+        <div class="teaser-big-detail-hilight">
+            <h4>
+                <a href="#"> Top 10 Hotels in Bangkok </a>
+            </h4>
+            <h5> best hotel deals in bangkok </h5>
+            <p> Backed by popular votes, you can rest assured that these Top 10 Hotels’ facilities, interior décor, service and location will be above the industry average. Check them out! <a href="#">Read more...</a></p>
+        </div>
+        <code class="language-html">.teaser-big-detail-highlight</code>
 
 
 </section>
@@ -232,7 +246,26 @@
         </pre>
 </section>
 
+<section class="wrapper-footer">
+    <div class="wrapper-footer-title">About Us</div>
+    <p class="wrapper-footer-txt">
+                        Web Design Copyright 2015 by <a target="_blank" href="http://www.asiawebdirect.com/aboutus/" rel="nofollow">Asia Web Direct</a><br>
+                        Please read our <a target="_blank" href="http://www.asiawebdirect.com/privacy/" rel="nofollow">Privacy Policy</a> and <a target="_blank" href="http://www.asiawebdirect.com/copyright.htm" rel="nofollow">Copyright Notice</a><br>
+                        E-mail: <a onclick="this.href=this.href+'&amp;page='+document.URL" target="_blank" href="http://www.asiawebdirect.com/customer/enquiry/?lang=en">Contact Us</a> | <a class="advertise_us" href="http://www.asiawebdirect.com/mediakit/?pid=AWDINP3167" target="_blank" rel="nofollow">Advertise with us</a>
+    </p>
+    <div class="wrapper-footer-feedback">
+         <a href="#modal" target="_top">
+            <div class="wrapper-footer-title--feedback">Send Us Your Feedback </div>
+        </a>
+        <p class="wrapper-footer-txt"> Help us keep this website up-to-date by sending us your comments and suggestions 
+        <a href="http://www.asiawebdirect.com/customer/enquiry/?lang=en" target="_top">Here</a>.<br><a rel="nofollow" href="http://www.asiawebdirect.com/customer/enquiry/?lang=en&amp;s=8" target="_top">(If your question is about Hotel or Tour please use this other form). </a>
+        </p>
+    </div>
+</section>
 
+
+<a class="new_page" target="_blank"> Hello World </a>
+  
 
     <!-- <script src="js/main.js"></script> <!-- Resource jQuery -->
 </body>
