update history js
update history js

--- a/second.html
+++ b/second.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Received Page </title>
+	<title> Second Page </title>
 	<script src="js/vendor/jquery.js"></script>
-	<script src="js/style-guide.js"></script>
+    <script src="js/cookie_history.js"></script>
 
 </head>
 <body>
-	<div class="test">TEST</div>
+	Hi, I'm a second page!
 </body>
 </html>
