--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="js/vendor/fastclick.js"></script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/style-guide.js"></script>
+    <script src="js/cookie_history.js"></script>
 
     <title> Style Guide 1.0</title>
 </head>
@@ -264,7 +265,6 @@
 </section>
 
 
-<a class="new_page" target="_blank"> Hello World </a>
   
 
     <!-- <script src="js/main.js"></script> <!-- Resource jQuery -->
